src/coder/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coder-ingress
  namespace: coder
  annotations:
    kubernetes.io/ingress.className: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: coder.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: coder
            port:
              number: 80
  # - host: "*.coder.lan"
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend: 
  #         service:
  #           name: coder
  #           port:
  #             number: 80
  tls:
    - hosts:
      - coder.lan
      - "*.coder.lan"
      secretName: coder-tls-secret
